Modify - import script files
1. js.cookie.js
2. expires-cookie.js

--- a/expires-cookie/sample.html
+++ b/expires-cookie/sample.html
@@ -6,6 +6,9 @@
 <title>Document</title>
 </head>
 <body>
+<h1>expires-cookie.js 테스트</h1>
 
+<script src="../js/libs/js-cookie/src/js.cookie.js"></script>
+<script src="js/expires-cookie.js"></script>
 </body>
 </html>
